--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -13,5 +13,8 @@ body {
 </head>
 <body>
 	<h1>Jasmin Basler</h1>>
+	<p>
+		<a href="https://baslerja.github.io/EIA1-SoSe2020/Aufgaben/Aufgabe1/Portfolio.html">Link Aufgabe 1</a>
+	</p>
 </body>
 </html>
