--- a/Aufgaben/Aufgabe2/Portfolio.html
+++ b/Aufgaben/Aufgabe2/Portfolio.html
@@ -7,57 +7,66 @@
 </head>
 
 <body>
+    <center>
+        <p>
+            <h1>Portfolio</h1>
+        </p>
 
-    <h1>Portfolio</h1>
-    <h2>Fotos</h2>
-   
-    <p>
-        <a href="foto1_big.jpg">
-            <img src="foto1.jpg" alt="Foto 1 groß">
-        </a>
-    </p>
+        <p>
+            <a href="aboutme.html">About me</a>
+        </p>
 
-    <p>
-        <img src="foto2.jpg" alt="Foto 2">
-    </p>
+        <p>
+            <a href="contact.html">Contact</a>
+        </p>
 
-    <p>
-        <img src="foto3.jpg" alt="Foto 3">
-    </p>
+        <h2>Fotos</h2>
 
-    <p>
-        <img src="foto4.jpg" alt="Foto 4">
-    </p>
-    <p>
+        <p>Die folgenden Bilder sind im Rahmen des Leistungskurses Bildende Kunst in der Kursstufe entstanden.<br></p>
+        <p>Die Aufgabe war die Erstellung eines Leporellos zur Geschichte der Schere.</p>
+
+        <p>
+            <img src="schere1.JPG" alt="Foto 1" height="300px" width="400px">
+        </p>
+
+        <p>
+            <img src="schere2.JPG" alt="Foto 2" height="300px" width="400px">
+        </p>
+
+        <p>
+            <img src="schere3.JPG" alt="Foto 3" height="300px" width="400px">
+        </p>
+
+        <p>
+            <img src="schere4.jpg" alt="Foto 4" height="300px" width="400px">
+        </p>
+
         <h3>Videos</h3>
-    </p>
-    <p>
-        <video width="800" height="100" controls>
-            <source src="clip1.mp4" type="video/mp4">
-            <source src="clip1.ogg" type="video/ogg">
-        </video>
-    </p>
 
-    <p>
-        <video width="800" height="100" controls>
-            <source src="clip2.mp4" type="video/mp4">
-            <source src="clip2.ogg" type="video/ogg">
-        </video>
-    </p>
+        <p>
+            <video width="640" height="360" controls>
+                <source src="video1.mp4" type="video/mp4">
+            </video>
+        </p>
 
-    <p>
-        <video width="800" height="100" controls>
-            <source src="clip3.mp4" type="video/mp4">
-            <source src="clip3.ogg" type="video/ogg">
-        </video>
-    </p>
+        <p>
+            <video width="640" height="360" controls>
+                <source src="video2.mp4" type="video/mp4">
+            </video>
+        </p>
 
-    <p>
-        <video width="800" height="100" controls>
-            <source src="clip4.mp4" type="video/mp4">
-            <source src="clip4.ogg" type="video/ogg">
-        </video>
-    </p>
+        <p>
+            <video width="640" height="360" controls>
+                <source src="video3.mp4" type="video/mp4">
+            </video>
+        </p>
+
+        <p>
+            <video width="640" height="360" controls>
+                <source src="video4.mp4" type="video/mp4">
+            </video>
+        </p>
+    </center>
 </body>
 
 </html>
