--- a/Aufgaben/Aufgabe2/aboutme.html
+++ b/Aufgaben/Aufgabe2/aboutme.html
@@ -6,23 +6,19 @@
 
     <meta charset="utf-8">
     <title>About Me</title>
-    <style>
-    
-
-    </style>
 
 </head>
 
 <body>
-
+<center>
     <h1>About Me</h1>
-    <p><img alt="Profilfoto" src="portrait.jpg"/></p>
-<p>
-    Mein Name ist Jasmin.
-</p>
-<p>
-    Meine Interessen
-</p>
+    <p>
+        <img src="portrait.jpg" alt="Profilfoto">
+    </p>
+    <p>
+        Hallo! Ich bin Jasmin.
+    </p>
+</center>
 </body>
 
 </html>
