--- a/Aufgaben/Aufgabe2/contact.html
+++ b/Aufgaben/Aufgabe2/contact.html
@@ -9,10 +9,15 @@
 </head>
 
 <body>
-
+<center>
     <h1>Contact</h1>
-    <p>This is a paragraph.</p>
-
+    <p>
+        <a href="mailto:jasmin.basler@hs-furtwangen.de">Jasmin Basler, jasmin.basler@hs-furtwangen.de</a>
+    </p>
+    <p>
+        <a href="https://www.instagram.com/jas.min.ba/">Instagram</a>
+    </p>
+</center>
 </body>
 
 </html>
