--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -14,9 +14,10 @@
 </head>
 
 <body>
-	<h1>Jasmin Basler</h1>>
+	<h1>Jasmin Basler</h1>
 
-	<a href="https://baslerja.github.io/EIA1-SoSe2020/Aufgaben/Aufgabe1/Portfolio.html">Link Aufgabe 1</a>
+	<a href="https://baslerja.github.io/EIA1-SoSe2020/Aufgaben/Aufgabe1/Portfolio.html">Link zu Aufgabe 1</a>
+	<a href="https://baslerja.github.io/EIA1-SoSe2020/Aufgaben/Aufgabe2/Portfolio.html">Link zu Aufgabe 2</a>
 
 </body>
 
