--- a/Aufgaben/Aufgabe2/Portfolio.html
+++ b/Aufgaben/Aufgabe2/Portfolio.html
@@ -9,21 +9,26 @@
 <body>
     <center>
         <p>
-            <h1>Portfolio</h1>
+        <h1>Portfolio</h1>
         </p>
 
         <p>
-            <a href="aboutme.html">About me</a>
+            <a href="startseite.html">STARTSEITE</a>
+
+            <a href="Portfolio.html">PORTFOLIO</a>
+
+            <a href="aboutme.html">ABOUT ME</a>
+
+            <a href="contact.html">CONTACT</a>
         </p>
 
-        <p>
-            <a href="contact.html">Contact</a>
-        </p>
+        <p>In diesem Portfolio werde ich einige meiner Arbeiten ausstellen.</p>
 
         <h2>Fotos</h2>
 
-        <p>Die folgenden Bilder sind im Rahmen des Leistungskurses Bildende Kunst in der Kursstufe entstanden.<br></p>
-        <p>Die Aufgabe war die Erstellung eines Leporellos zur Geschichte der Schere.</p>
+        <p>Die folgenden Bilder sind im Rahmen des <i>Leistungskurses Bildende Kunst</i> in der Kursstufe
+            entstanden.<br></p>
+        <p>Die Aufgabe war die Erstellung eines Leporellos zur <i>Geschichte der Schere</i>.</p>
 
         <p>
             <img src="schere1.JPG" alt="Foto 1" height="300px" width="400px">
@@ -41,7 +46,9 @@
             <img src="schere4.jpg" alt="Foto 4" height="300px" width="400px">
         </p>
 
-        <h3>Videos</h3>
+        <h3><big>Videos</big></h3>
+
+        <p>Quelle:Pixabay.com</p>
 
         <p>
             <video width="640" height="360" controls>
