--- a/Aufgaben/Aufgabe2/aboutme.html
+++ b/Aufgaben/Aufgabe2/aboutme.html
@@ -12,12 +12,25 @@
 <body>
 <center>
     <h1>About Me</h1>
+
+    <p>
+        <a href="startseite.html">STARTSEITE</a>
+
+        <a href="Portfolio.html">PORTFOLIO</a>
+
+        <a href="aboutme.html">ABOUT ME</a>
+
+        <a href="contact.html">CONTACT</a>
+    </p>
+
     <p>
         <img src="portrait.jpg" alt="Profilfoto">
     </p>
-    <p>
-        Hallo! Ich bin Jasmin.
-    </p>
+
+    <p>Hallo! Mein Name ist <b>Jasmin</b>.<br></p>
+    <p>Ich bin 20 Jahre alt und studiere Medienkonzeption an der Hochschule Furtfangen.<br></p>
+    <p>Meine Hobbys sind Zeichnen, Malen und Musik.</p>
+  
 </center>
 </body>
 
