--- a/Aufgaben/Aufgabe2/contact.html
+++ b/Aufgaben/Aufgabe2/contact.html
@@ -9,15 +9,32 @@
 </head>
 
 <body>
-<center>
-    <h1>Contact</h1>
-    <p>
-        <a href="mailto:jasmin.basler@hs-furtwangen.de">Jasmin Basler, jasmin.basler@hs-furtwangen.de</a>
-    </p>
-    <p>
-        <a href="https://www.instagram.com/jas.min.ba/">Instagram</a>
-    </p>
-</center>
+    <center>
+        <h1>Contact</h1>
+
+        <p>
+            <a href="startseite.html">STARTSEITE</a>
+
+            <a href="Portfolio.html">PORTFOLIO</a>
+
+            <a href="aboutme.html">ABOUT ME</a>
+
+            <a href="contact.html">CONTACT</a>
+        </p>
+
+        <p>Solltest du Fragen oder Anregungen haben, kontaktiere mich sehr gern per <b>E-mail</b><br></p>
+        <p> oder schau dich auf meinen <b>Sozialen Netzwerken</b> um.</p>
+        
+        <p>
+            <a href="mailto:jasmin.basler@hs-furtwangen.de">Send mail to Jasmin Basler</a>
+        </p>
+        <p>
+            <a href="https://www.instagram.com/jas.min.ba/">Instagram</a>
+        </p>
+        <p>
+            <a href="https://de-de.facebook.com/jasmin.basler.5">Facebook</a>
+        </p>
+    </center>
 </body>
 
 </html>
