--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -14,10 +14,13 @@
 </head>
 
 <body>
-	<h1>Jasmin Basler</h1>
-
-	<a href="https://baslerja.github.io/EIA1-SoSe2020/Aufgaben/Aufgabe1/Portfolio.html" target="_blank">Link zu Aufgabe 1</a><br>
-	<a href="https://baslerja.github.io/EIA1-SoSe2020/Aufgaben/Aufgabe2/startseite.html" target="_blank">Link zu Aufgabe 2</a>
+	
+	<a href="https://baslerja.github.io/EIA1-SoSe2020/Aufgaben/Aufgabe3/Portfolio.html" target="_blank">Link zu Aufgabe
+		3</a><br>
+	<a href="https://baslerja.github.io/EIA1-SoSe2020/Aufgaben/Aufgabe2/startseite.html" target="_blank">Link zu Aufgabe
+		2</a>
+	<a href="https://baslerja.github.io/EIA1-SoSe2020/Aufgaben/Aufgabe1/Portfolio.html" target="_blank">Link zu Aufgabe
+		1</a><br>
 
 </body>
 
