--- a/Aufgaben/Aufgabe3/aboutme.html
+++ b/Aufgaben/Aufgabe3/aboutme.html
@@ -25,7 +25,7 @@
         <h2>Jasmin Basler</h2>
     </div>
     <div class="text">
-        <p>Ich bin 20 Jahre alst und studiere Medienkonzeption an der Hochschule Furtwangen.</p>
+        <p>Ich bin Jasmin, 20 Jahre alt und studiere Medienkonzeption an der Hochschule Furtwangen.</p>
     </div>
 
     <div class="instagram">
