--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -14,13 +14,14 @@
 </head>
 
 <body>
+
+	<a href="https://baslerja.github.io/EIA1-SoSe2020/Aufgaben/Aufgabe4/aufgabe4.html" target="_blank">Aufgabe 4</a><br>
 	
-	<a href="https://baslerja.github.io/EIA1-SoSe2020/Aufgaben/Aufgabe3/Portfolio.html" target="_blank">Link zu Aufgabe
-		3</a><br>
-	<a href="https://baslerja.github.io/EIA1-SoSe2020/Aufgaben/Aufgabe2/startseite.html" target="_blank">Link zu Aufgabe
-		2</a><br>
-	<a href="https://baslerja.github.io/EIA1-SoSe2020/Aufgaben/Aufgabe1/Portfolio.html" target="_blank">Link zu Aufgabe
-		1</a>
+	<a href="https://baslerja.github.io/EIA1-SoSe2020/Aufgaben/Aufgabe3/Portfolio.html" target="_blank">Aufgabe 3</a><br>
+
+	<a href="https://baslerja.github.io/EIA1-SoSe2020/Aufgaben/Aufgabe2/startseite.html" target="_blank">Aufgabe 2</a><br>
+
+	<a href="https://baslerja.github.io/EIA1-SoSe2020/Aufgaben/Aufgabe1/Portfolio.html" target="_blank">Aufgabe 1</a>
 
 </body>
 
