--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+	<a href="https://baslerja.github.io/EIA1-SoSe2020/Aufgaben/Aufgabe6/aufgabe6.html" target="_blank">Aufgabe 6</a>
 
 	<a href="https://baslerja.github.io/EIA1-SoSe2020/Aufgaben/Aufgabe5/aufgabe5.html" target="_blank">Aufgabe 5</a><br>
 
