Änderung Text Aufg6

--- a/Aufgaben/Aufgabe6/aufgabe6.html
+++ b/Aufgaben/Aufgabe6/aufgabe6.html
@@ -30,7 +30,7 @@
     <main>
         <section>
             <h2 id="h2a">31116.5kg CO2</h2>
-            <p id="p1">Emission absolute in 2018</p>
+            <p id="p1">Emission absolute world wide in 2018</p>
         </section>
         
         <section>
