--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -8,12 +8,14 @@
 		body {
 			font-family: arial;
 			font-size: small;
-			background: #eeeee
+			background: #eeeeee
 		}
 	</style>
 </head>
 
 <body>
+	<a href="https://baslerja.github.io/EIA1-SoSe2020/Aufgaben/Aufgabe7/aufgabe7.html" target="_blank">Aufgabe 7</a> mit <a href="https://baslerja.github.io/EIA1-SoSe2020/Aufgaben/Aufgabe7/flowchart.html" target="_blank">Flow-Chart</a><br>
+
 	<a href="https://baslerja.github.io/EIA1-SoSe2020/Aufgaben/Aufgabe6/aufgabe6.html" target="_blank">Aufgabe 6</a><br>
 
 	<a href="https://baslerja.github.io/EIA1-SoSe2020/Aufgaben/Aufgabe5/aufgabe5.html" target="_blank">Aufgabe 5</a><br>
