--- a/Aufgaben/Aufgabe10/todo.html
+++ b/Aufgaben/Aufgabe10/todo.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,13 +9,17 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
+    <script src="artyom.window.min.js"></script>
 </head>
+
 <body>
     <main>
         <h1>ToDo App</h1>
         <p id="counter">3 in total</p>
         <p id="counterOpen">2 open</p>
         <p id="counterDone">1 done</p>
+        
+        <p>Spracheingabe: "Erstelle Aufgabe (neues To Do)"</p>
 
         <div class="inputGroup">
             <input type="text" id="inputTodo" placeholder="Add another task">
@@ -24,4 +29,5 @@
         <div id="todos"></div>
     </main>
 </body>
+
 </html>
