--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-	<a href="https://baslerja.github.io/EIA1-SoSe2020/Aufgaben/Aufgabe10/todo.html" target="_blank">Aufgabe 10</a><br>
+	<a href="https://baslerja.github.io/EIA1-SoSe2020/Aufgaben/Aufgabe10/todo.html" target="_blank">Aufgabe 10 und 11</a><br>
 
 	<a href="https://baslerja.github.io/EIA1-SoSe2020/Aufgaben/Aufgabe9/aufgabe9.html" target="_blank">Aufgabe 9</a> mit <a href="https://baslerja.github.io/EIA1-SoSe2020/Aufgaben/Aufgabe9/flowchart.html" target="_blank">Flow-Chart</a><br>
 	
